force-app/main/default/objects/CLQ_Program__c/fields/Initial_Registration_Not_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Registration_Not_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box allows a currently rated program to create an Initial Registration.</inlineHelpText>
    <label>Initial Registration Override</label>
    <type>Checkbox</type>
</CustomField>