force-app/main/default/objects/CLQ_Program__c/fields/IR_0_Rating_6_months_ago__c.field-meta.xml
<CustomField>
    <fullName>IR_0_Rating_6_months_ago__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box allows a program to create an Initial Registration less than 6 months after its rating was removed.</inlineHelpText>
    <label>Allow 6 Month Initial Override</label>
    <type>Checkbox</type>
</CustomField>