force-app/main/default/objects/CLQ_Program__c/fields/IR_Rating_Removed_12_months__c.field-meta.xml
<CustomField>
    <fullName>IR_Rating_Removed_12_months__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box allows a program to create an Initial Registration less than 12 months after its rating was removed due to SRNC.</inlineHelpText>
    <label>Allow 12 Month Initial Override</label>
    <type>Checkbox</type>
</CustomField>