force-app/main/default/objects/CLQ_Program__c/fields/Is_Executed__c.field-meta.xml
<CustomField>
    <fullName>Is_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to resolve the bug 11632. We are using this field in CLQ_Program_Updates Process Builder</description>
    <label>Is Executed</label>
    <type>Checkbox</type>
</CustomField>