force-app/main/default/objects/CLQ_Program__c/fields/Is_Summer_Only_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Summer_Only_Program__c</fullName>
    <label>SUTQ exemption-Care Summer Only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>