force-app/main/default/objects/CLQ_Program__c/fields/Last_6_Months_Provisional__c.field-meta.xml
<CustomField>
    <fullName>Last_6_Months_Provisional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box calculates a provisionally licensed program&apos;s Rating Effective Date as the Inspection Approval Date rather than the first Sunday after the provisional period ends.</inlineHelpText>
    <label>Provisional Star Rating Override</label>
    <type>Checkbox</type>
</CustomField>