force-app/main/default/objects/CLQ_Program__c/fields/Lic_Reviewer_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Lic_Reviewer_IsActive__c</fullName>
    <formula>CLQ_Licensing_Specialist__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lic Reviewer IsActive</label>
    <type>Checkbox</type>
</CustomField>