force-app/main/default/objects/CLQ_Program__c/fields/License_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Begin_Date__c</fullName>
    <description>DrawLoop: Created for Forms &amp; Reports.</description>
    <formula>CASE(  
CLQ_License_Type__c  , 
 &apos;Provisional&apos;, TEXT(MONTH(CLQ_License_Issue_Date__c ))+ &quot;/&quot; + TEXT(DAY(CLQ_License_Issue_Date__c )) + &quot;/&quot; +   TEXT(YEAR(CLQ_License_Issue_Date__c ))  ,

 &apos;Continuous&apos;, TEXT(MONTH(CLQ_Continuous_License_Begin_Date__c )) + &quot;/&quot; + TEXT(DAY(CLQ_Continuous_License_Begin_Date__c )) + &quot;/&quot;  + TEXT(YEAR(CLQ_Continuous_License_Begin_Date__c )), 



Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Begin Date</label>
    <type>Text</type>
</CustomField>