force-app/main/default/objects/CLQ_Program__c/fields/License_End_Date__c.field-meta.xml
<CustomField>
    <fullName>License_End_Date__c</fullName>
    <description>DrawLoop: Created for Forms &amp; Reports.</description>
    <formula>CASE(  
CLQ_License_Type__c  , 
 &apos;Provisional&apos;, TEXT(MONTH( CLQ_License_Expiration_Date__c  ))+ &quot;/&quot; + TEXT(DAY(CLQ_License_Expiration_Date__c )) + &quot;/&quot; +   TEXT(YEAR(CLQ_License_Expiration_Date__c ))  ,

 &apos;Continuous&apos;, &quot;&quot;, 



Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License End Date</label>
    <type>Text</type>
</CustomField>