force-app/main/default/objects/CLQ_Program__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>License Number</label>
    <type>AutoNumber</type>
</CustomField>