force-app/main/default/objects/CLQ_Program__c/fields/NACIndicator__c.field-meta.xml
<CustomField>
    <fullName>NACIndicator__c</fullName>
    <label>NACIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>