force-app/main/default/objects/CLQ_Program__c/fields/NAEYCIndicator__c.field-meta.xml
<CustomField>
    <fullName>NAEYCIndicator__c</fullName>
    <label>NAEYCIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>