force-app/main/default/objects/CLQ_Program__c/fields/NAFCCIndicator__c.field-meta.xml
<CustomField>
    <fullName>NAFCCIndicator__c</fullName>
    <label>NAFCCIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>