force-app/main/default/objects/CLQ_Program__c/fields/Name_of_Day_Camp_from_ACA__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Day_Camp_from_ACA__c</fullName>
    <inlineHelpText>Name of Day Camp as it appears on ACA Accreditation Certificate</inlineHelpText>
    <label>Name of Day Camp from ACA Certificate</label>
    <length>250</length>
    <type>Text</type>
</CustomField>