force-app/main/default/objects/CLQ_Program__c/fields/NECPAIndicator__c.field-meta.xml
<CustomField>
    <fullName>NECPAIndicator__c</fullName>
    <label>NECPAIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>