force-app/main/default/objects/CLQ_Program__c/fields/Non_Traditional_Hours_Only__c.field-meta.xml
<CustomField>
    <fullName>Non_Traditional_Hours_Only__c</fullName>
    <label>SUTQ exemption-Non-Traditional care only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>