force-app/main/default/objects/CLQ_Program__c/fields/OEDS_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>OEDS_Location_Id__c</fullName>
    <description>Created for &apos;IRN Mismatch Report&apos;</description>
    <label>Location Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>