force-app/main/default/objects/CLQ_Program__c/fields/OEDS_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>OEDS_Location_Type__c</fullName>
    <description>OEDS: Created for IRN Mismatch Report</description>
    <label>Location Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>