force-app/main/default/objects/CLQ_Program__c/fields/OEDS_Site_Status__c.field-meta.xml
<CustomField>
    <fullName>OEDS_Site_Status__c</fullName>
    <description>OEDS Integration</description>
    <label>Site Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>