force-app/main/default/objects/CLQ_Program__c/fields/OnGoing_Transaction_Rule__c.field-meta.xml
<CustomField>
    <fullName>OnGoing_Transaction_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box allows a program to create an Ongoing Registration outside of the eligible time-frame.</inlineHelpText>
    <label>Ongoing Registration Override</label>
    <type>Checkbox</type>
</CustomField>