force-app/main/default/objects/CLQ_Program__c/fields/PFCCIndicator__c.field-meta.xml
<CustomField>
    <fullName>PFCCIndicator__c</fullName>
    <label>PFCCIndicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>