force-app/main/default/objects/CLQ_Program__c/fields/Previous_Comments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Comments__c</fullName>
    <description>Field to display history of comments on this program record. Created to meet SUTQ requirements to support comments versioning requirements</description>
    <label>Previous Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>