force-app/main/default/objects/CLQ_Program__c/fields/Pro_License_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Pro_License_Exp_Date__c</fullName>
    <description>This field is created to fix the defect #11640 &amp; 11658.</description>
    <label>Pro License Exp Date</label>
    <type>Date</type>
</CustomField>