force-app/main/default/objects/CLQ_Program__c/fields/Program_County__c.field-meta.xml
<CustomField>
    <fullName>Program_County__c</fullName>
    <description>This field is created to capture the value of Program County</description>
    <formula>CLQ_County__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program County</label>
    <type>Text</type>
</CustomField>