force-app/main/default/objects/CLQ_Program__c/fields/Program_Icon_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>Program_Icon_For_Portal__c</fullName>
    <formula>&quot;https://gcccldev-bottest.cs8.force.com/file-asset/Home_Child?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Icon For Portal</label>
    <type>Text</type>
</CustomField>