force-app/main/default/objects/CLQ_Program__c/fields/Program_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_License_Number__c</fullName>
    <label>Program License Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>