force-app/main/default/objects/CLQ_Program__c/fields/Program_Rating__c.field-meta.xml
<CustomField>
    <fullName>Program_Rating__c</fullName>
    <label>SUTQ Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>