force-app/main/default/objects/CLQ_Program__c/fields/Rating_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Anniversary_Date__c</fullName>
    <description>Program rating anniversary date gets populated based on the program effective date and expiration date.</description>
    <label>Rating Anniversary Date</label>
    <type>Date</type>
</CustomField>