force-app/main/default/objects/CLQ_Program__c/fields/Rating_Discontinue__c.field-meta.xml
<CustomField>
    <fullName>Rating_Discontinue__c</fullName>
    <description>Rating discontinue date is used when the program rating turns to 0 either by manually or through AR process or through Ongoing registration it should get punched with the system date on that particular date</description>
    <label>Rating Discontinue Date</label>
    <type>Date</type>
</CustomField>