force-app/main/default/objects/CLQ_Program__c/fields/Rating_Display__c.field-meta.xml
<CustomField>
    <fullName>Rating_Display__c</fullName>
    <description>DrawLoop: Created for Forms &amp; Reports.</description>
    <formula>IF( ISPICKVAL( Program_Rating__c , &quot;1&quot;),&quot;1&quot;,
 IF( ISPICKVAL( Program_Rating__c , &quot;2&quot;),&quot;2&quot;, 
IF( ISPICKVAL( Program_Rating__c , &quot;3&quot;),&quot;3&quot;,
IF( ISPICKVAL( Program_Rating__c , &quot;4&quot;),&quot;4&quot;,
IF( ISPICKVAL( Program_Rating__c , &quot;5&quot;),&quot;5&quot;,


&quot;&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Display</label>
    <type>Text</type>
</CustomField>