force-app/main/default/objects/CLQ_Program__c/fields/Rating_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Effective_Date__c</fullName>
    <label>SUTQ Effective Date</label>
    <type>Date</type>
</CustomField>