force-app/main/default/objects/CLQ_Program__c/fields/Rating_Effective_Dt__c.field-meta.xml
<CustomField>
    <fullName>Rating_Effective_Dt__c</fullName>
    <label>Current Rating Effective Date</label>
    <type>Date</type>
</CustomField>