force-app/main/default/objects/CLQ_Program__c/fields/Rating_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Expiration_Date__c</fullName>
    <label>SUTQ Expiration Date</label>
    <type>Date</type>
</CustomField>