force-app/main/default/objects/CLQ_Program__c/fields/Rating_Reduction_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reduction_Date__c</fullName>
    <description>Adding this field to track the manual rating update with rating reasons &quot;Rating Reduced&quot;</description>
    <label>Rating Reduction Date</label>
    <type>Date</type>
</CustomField>