force-app/main/default/objects/CLQ_Program__c/fields/RatingChangedDate__c.field-meta.xml
<CustomField>
    <fullName>RatingChangedDate__c</fullName>
    <description>This field gets updated when the annual report not met and the rating got lowered.</description>
    <label>RatingChangedDate</label>
    <type>Date</type>
</CustomField>