force-app/main/default/objects/CLQ_Program__c/fields/Registration_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Registration_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this box allows a program to create an SUTQ registration while there is another SUTQ registration in progress.</inlineHelpText>
    <label>Registration In Progress Override</label>
    <type>Checkbox</type>
</CustomField>