force-app/main/default/objects/CLQ_Program__c/fields/Reviewer_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_s_Manager_Email__c</fullName>
    <description>[6/14/2017] CR#11200</description>
    <label>Reviewer&apos;s Manager Email</label>
    <type>Email</type>
</CustomField>