force-app/main/default/objects/CLQ_Program__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>CLQ_Role__c</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>