force-app/main/default/objects/CLQ_Program__c/fields/Role_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Contact_Name__c</fullName>
    <formula>Role__r.Owner:User.FirstName  + &quot; &quot; + Role__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Contact Name</label>
    <type>Text</type>
</CustomField>