force-app/main/default/objects/CLQ_Program__c/fields/Role_for_Owner__c.field-meta.xml
<CustomField>
    <fullName>Role_for_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LookUp field for Owner</description>
    <label>Role for Owner</label>
    <referenceTo>CLQ_Role__c</referenceTo>
    <relationshipLabel>Programs (Role for Owner)</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>