force-app/main/default/objects/CLQ_Program__c/fields/Role_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Program_Name__c</fullName>
    <formula>IF( ISPICKVAL(   Role__r.CLQ_Role__c   , &apos;Owner&apos;) ,    Role__r.CLQ_Program__r.Name , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Program Name</label>
    <type>Text</type>
</CustomField>