force-app/main/default/objects/CLQ_Program__c/fields/School_Breaks_Only__c.field-meta.xml
<CustomField>
    <fullName>School_Breaks_Only__c</fullName>
    <label>SUTQ exemption-Care School Breaks only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>