force-app/main/default/objects/CLQ_Program__c/fields/Services_Offered_Day_Camp__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered_Day_Camp__c</fullName>
    <label>Services Offered Day Camp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meals Provided</fullName>
            </value>
            <value>
                <fullName>Evening Care</fullName>
            </value>
            <value>
                <fullName>Swimming/Water Activities</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Overnight Camping</fullName>
            </value>
            <value>
                <fullName>Field Trips</fullName>
            </value>
            <value>
                <fullName>Specialized Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>