force-app/main/default/objects/CLQ_Program__c/fields/SUTQ_Current_Rating__c.field-meta.xml
<CustomField>
    <fullName>SUTQ_Current_Rating__c</fullName>
    <label>SUTQ_Current_Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>