force-app/main/default/objects/CLQ_Program__c/fields/SUTQ_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>SUTQ_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUTQ Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SUTQReviewer</relationshipName>
    <type>Lookup</type>
</CustomField>