force-app/main/default/objects/CLQ_Program__c/fields/SUTQ_Reviewer_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SUTQ_Reviewer_IsActive__c</fullName>
    <description>To check if SUTQ Reviewer is Active</description>
    <formula>SUTQ_Reviewer__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUTQ Reviewer IsActive</label>
    <type>Checkbox</type>
</CustomField>