force-app/main/default/objects/CLQ_Program__c/fields/SUTQ_star_image__c.field-meta.xml
<CustomField>
    <fullName>SUTQ_star_image__c</fullName>
    <formula>IMAGE(CASE( Program_Rating__c ,
 &quot;1&quot;, &quot;/resource/SUTQonestar.jpeg&quot;,
 &quot;2&quot; ,&quot;/resource/SUTQtwostar.jpeg&quot; ,
 &quot;3&quot; , &quot;/resource/SUTQthreestar.jpeg&quot;, 
 &quot;4&quot; , &quot;/resource/SUTQfourstar.jpeg&quot;,  
 &quot;5&quot; , &quot;/resource/SUTQfivestar.jpeg&quot; ,
  &quot;alt image&quot;),
 &quot;image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUTQ star image</label>
    <type>Text</type>
</CustomField>