force-app/main/default/objects/CLQ_Program__c/fields/Total_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrollment__c</fullName>
    <description>DrawLoop: Created for Forms &amp; Reports.</description>
    <formula>CASE(  
CLQ_Program_Type__c   , 
 &apos;FCC - Type A Home&apos;, TEXT(CLQ_Total_Enrollment_Under_2_years__c )  ,

 &apos;Child Care Center&apos;, TEXT(CLQ_Total_Enrollment_Under_2_5_years__c ), 



Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Enrollment (F&amp;Rs)</label>
    <type>Text</type>
</CustomField>