force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_Child_Care_Center.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Child_Care_Center</fullName>
    <active>true</active>
    <description>VDSS - Child Care Centers</description>
    <label>Child Care Center</label>
</RecordType>