force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_Day_Camp.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Day_Camp</fullName>
    <active>true</active>
    <description>Non Licensed - Day Camp</description>
    <label>Day Camp</label>
</RecordType>