force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_FCC_Type_B_Home.recordType-meta.xml
<RecordType>
    <fullName>CLQ_FCC_Type_B_Home</fullName>
    <active>true</active>
    <description>ODJFS - Type B Homes: 1 to 6</description>
    <label>FCC - Type B Home</label>
</RecordType>