force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_In_Home_Aide.recordType-meta.xml
<RecordType>
    <fullName>CLQ_In_Home_Aide</fullName>
    <active>true</active>
    <description>Non Licensed - In Home Aide</description>
    <label>In-Home Aide</label>
</RecordType>