force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_Out_of_State_Registration.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Out_of_State_Registration</fullName>
    <active>true</active>
    <description>Non Licensed - Out of State Registration</description>
    <label>Out of State Registration</label>
</RecordType>