force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_Pre_School.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Pre_School</fullName>
    <active>true</active>
    <description>ODE - PS (Pre-School)</description>
    <label>Pre School</label>
</RecordType>