force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_School_Age_Child_Care.recordType-meta.xml
<RecordType>
    <fullName>CLQ_School_Age_Child_Care</fullName>
    <active>true</active>
    <description>ODE- SACC (School Age Child Care)</description>
    <label>School Age Child Care</label>
</RecordType>