force-app/main/default/objects/CLQ_Program__c/recordTypes/CLQ_Type_A_Home.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Type_A_Home</fullName>
    <active>true</active>
    <description>ODJFS - Type A Homes: 7 to 12</description>
    <label>FCC - Type A Home</label>
</RecordType>