force-app/main/default/objects/CLQ_Program__c/validationRules/Day_Camp_Name_is_Required_if_Accredited.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Camp_Name_is_Required_if_Accredited</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND(CLQ_ACA_Accredited__c = true,
 ISBLANK(CLQ_Day_Camp_Name__c))</errorConditionFormula>
    <errorDisplayField>CLQ_Day_Camp_Name__c</errorDisplayField>
    <errorMessage>Day Camp Name is required</errorMessage>
</ValidationRule>