force-app/main/default/objects/CLQ_Program__c/validationRules/Foster_Children_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Foster_Children_is_Required</fullName>
    <active>true</active>
    <description>Foster Children is Required if Foster Parent is Yes</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; AND(ISPICKVAL( CLQ_Are_you_Foster_Parent__c  ,&quot;Yes&quot;),
ISBLANK(TEXT(CLQ_Foster_Children__c)))</errorConditionFormula>
    <errorDisplayField>CLQ_Foster_Children__c</errorDisplayField>
    <errorMessage>Please select Foster Children</errorMessage>
</ValidationRule>