force-app/main/default/objects/CLQ_Program__c/validationRules/Level_of_Radon_Gas_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_of_Radon_Gas_is_Required</fullName>
    <active>true</active>
    <description>Level of Radon Gas is Required if Radon Gas is Yes</description>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; 
AND(ISPICKVAL(CLQ_Radon_Gas__c,&quot;Yes&quot;),
ISBLANK(CLQ_Level_of_Radon_Gas__c))</errorConditionFormula>
    <errorDisplayField>CLQ_Level_of_Radon_Gas__c</errorDisplayField>
    <errorMessage>Please enter Level of Radon gas</errorMessage>
</ValidationRule>